# Autonomous-Driving-Perception-Module

./: .gitignore  Dockerfile  README.md  README_ZN.md  pyproject.toml  requirements.txt
configs/: config_example.yaml
docs/: technical_report.md
scripts/: prepare_dummy_data.py  run_training_example.bat  run_training_example.sh
src/: __init__.py
src/inference/: __init__.py  export_onnx.py  infer_onnx.py
src/models/: __init__.py  multitask_unet.py
src/ros2_integration/: __init__.py  lane_sign_node.py
src/ros2_integration/launch/: lane_sign.launch.py
src/training/: __init__.py  losses.py  metrics.py  train.py  utils.py
tests/: __init__.py  test_dataset.py  test_model_forward.py  test_onnx_export.py  test_ros2_node_import.py
