[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-driving-perception-module"
version = "1.0.0"
description = "Multi-task learning for lane line detection and traffic sign recognition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "autonomous-driving",
    "multi-task-learning",
    "lane-detection",
    "traffic-sign-recognition",
    "deep-learning",
    "pytorch",
    "ros2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
ros2 = [
    # ROS2 packages are typically installed via rosdep
]

[project.urls]
Homepage = "https://github.com/yourusername/Autonomous-Driving-Perception-Module"
Documentation = "https://github.com/yourusername/Autonomous-Driving-Perception-Module#readme"
Repository = "https://github.com/yourusername/Autonomous-Driving-Perception-Module.git"
Issues = "https://github.com/yourusername/Autonomous-Driving-Perception-Module/issues"

[project.scripts]
adpm-train = "src.training.train:main"
adpm-export = "src.inference.export_onnx:main"
adpm-infer = "src.inference.infer_onnx:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | checkpoints
  | logs
  | outputs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip = [".venv", "venv", "checkpoints", "logs", "outputs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "checkpoints",
    "logs",
    "outputs",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ros2_integration/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
